--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -10,5 +10,13 @@
   "contextMenuTitle": {
     "message": "发送到Gotify",
     "description": "The text for the context menu item."
+  },
+  "contextMenuConfigTitle": {
+    "message": "右键菜单配置",
+    "description": "右键菜单配置区域的标题"
+  },
+  "serverConfigTitle": {
+    "message": "服务器配置",
+    "description": "服务器配置区域的标题"
   }
 }
