--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -19,4 +19,63 @@
     "message": "Server Configuration",
     "description": "Title for server configuration section"
   }
+  ,
+  "notificationPushSuccess": {
+    "message": "Gotify Push Successful",
+    "description": "Notification title for successful push"
+  },
+  "notificationPushFailed": {
+    "message": "Gotify Push Failed",
+    "description": "Notification title for failed push"
+  },
+  "notificationNoConfig": {
+    "message": "Please configure server and Token in plugin settings first",
+    "description": "Message shown when no Gotify config is present"
+  },
+  "notificationWithTitle": {
+    "message": "Title: $1",
+    "description": "Notification message template that includes the title"
+  },
+  "notificationError": {
+    "message": "Error: $1. Please check network, URL, or Token.",
+    "description": "Notification message template for errors with substitution"
+  }
+  ,
+  "defaultTitle": {
+    "message": "default",
+    "description": "Default title used when user doesn't provide one"
+  },
+  "defaultRemarkPrefix": {
+    "message": "Token",
+    "description": "Prefix for generated token remark"
+  },
+  "tokenRemarkPlaceholder": {
+    "message": "Environment",
+    "description": "Placeholder for token remark input"
+  },
+  "tokenTokenPlaceholder": {
+    "message": "Enter Token...",
+    "description": "Placeholder for token input"
+  },
+  "deleteBtnText": {
+    "message": "Delete",
+    "description": "Text for delete button"
+  },
+  "alertMinOneToken": {
+    "message": "Please add at least one valid Token",
+    "description": "Alert shown when no token is provided"
+  },
+  "saveSuccessMsg": {
+    "message": "Settings saved",
+    "description": "Message shown after saving settings"
+  }
+  ,
+  "langOptionEn": {
+    "message": "English",
+    "description": "Language option text"
+  },
+  "langOptionZh": {
+    "message": "简体中文",
+    "description": "Language option text"
+  }
 }
